--- a/src/Login/login.css
+++ b/src/Login/login.css
@@ -76,6 +76,8 @@ body {
 }
 
 .remember-forgot label input {
+    position: relative;
+    top: 1px;
     accent-color: #fff;
     margin-right: 3px;
 }
